@@ -2,6 +2,9 @@ ChangeLog for herdstat
 
 2005-04-07 Aaron Walker <ka0ttic@gentoo.org>
 
+	* lib/portage_misc.cc, lib/portage_misc.hh, src/categories.hh,
+	src/action_meta_handler.cc: Moved categories_T to portage namespace.
+	Also moved get_possibles() to portage::find_package().
 	* lib/portage_version.cc, lib/portage_version.hh: Added
 	version_string_T and the plural version versions_T.
 	* lib/string.cc, lib/string.hh: Added vec2str() for converting a
